--- a/vue_restclound/package.json
+++ b/vue_restclound/package.json
@@ -13,10 +13,15 @@
     "crypto-js": "^4.0.0",
     "dingtalk-jsapi": "^2.13.23",
     "element-ui": "^2.15.6",
+    "file-saver": "^2.0.2",
+    "filesaver": "0.0.13",
+    "moment": "^2.29.1",
     "request": "^2.88.2",
+    "script-loader": "^0.7.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "xlsx": "^0.15.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -25,6 +30,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "html2canvas": "^1.3.3",
+    "jspdf": "^2.4.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
